--- a/Programming-Assignment-2/Question_2.ipynb
+++ b/Programming-Assignment-2/Question_2.ipynb
@@ -16,7 +16,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import RidgeRegression"
    ]
   },
   {
@@ -62,8 +63,7 @@
    "outputs": [],
    "source": [
     "train_X, valid_X, test_X = X[:80], X[80:100], X[100:]\n",
-    "train_y, valid_y, test_y = y[:80], y[80:100], y[100:]\n",
-    "\n"
+    "train_y, valid_y, test_y = y[:80], y[80:100], y[100:]"
    ]
   }
  ],
